# gazebo_rl_gym

./: .gitignore
src/gazebo_rl_gym/: CMakeLists.txt  package.xml  readme.md
src/gazebo_rl_gym/config/: controllers.yaml
src/gazebo_rl_gym/config/envs/: forklift_warehouse.yaml  turtlebot3_warehouse.yaml  warehouse.yaml
src/gazebo_rl_gym/config/train/: warehouse_ppo_forklift.yaml  warehouse_ppo_turtlebot3.yaml
src/gazebo_rl_gym/launch/: multi_robot.launch  warehouse_world.launch
src/gazebo_rl_gym/scripts/: eval_rsl_ppo_single.py  spawn_robots.py  train_rsl_ppo_single.py
src/gazebo_rl_gym/scripts/gazebo_rl_gym/envs/: __init__.py  gazebo_single_env.py  gazebo_vec_env.py  registry.py
src/gazebo_rl_gym/scripts/gazebo_rl_gym/utils/: __init__.py  config_loader.py  (+1 more)
src/gazebo_rl_gym/urdf/forklift/: forklift.gazebo.xacro  forklift.urdf.xacro  forklift.xacro  forklift_base.xacro
src/gazebo_rl_gym/urdf/nanocar/: nanocar.gazebo.xacro  nanocar.urdf.xacro  nanocar.xacro
src/gazebo_rl_gym/urdf/turtlebot3_burger/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_burger.xacro
src/gazebo_rl_gym/urdf/turtlebot3_waffle/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle.xacro
src/gazebo_rl_gym/urdf/turtlebot3_waffle_pi/: turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi.xacro
src/gazebo_rl_gym/worlds/: forklift_warehouse  warehouse.world  warehouse_2.world  warehouse_with_obstacles.world  warehouse_with_obstacles_with_pedestrians.world  warehouse_with_pedestrians.world
(+29 files in other folders)
