<?xml version="1.0"?>
<package format="2">
  <name>gazebo_rl_gym</name>
  <version>0.0.1</version>
  <description>A package to wrap Gazebo as a multi-agent Gym environment for RL training.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_controller</depend>
  <depend>tf</depend>
  <depend>xacro</depend>

  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-gym</exec_depend>
  <exec_depend>python3-tensorboard</exec_depend>
</package>
